--- a/koda/templates/vislice.html
+++ b/koda/templates/vislice.html
@@ -5,7 +5,7 @@
 <h3>Vislice</h3>
 {% if not session['napake'] + session['score']%}
 <div class="besedilo">
-    Najverjetneje že poznaš standardno igro vislice. Tukaj smo naredili nekaj podobnega, le da namesto črk v prazno polje vpisuješ formule in imena anorganskih spojin, odvisno od tega kar je podano. Za vsak pravilen odgovor dobiš eno točko, za vsak napačen odgovor pa se na zaslonu nariše dodatna črta. Izgubiš v primeru, če je napačnih 9 odgovorov in je figurica 'obešena'.
+    Najverjetneje že poznaš standardno igro vislice. Tukaj smo naredili nekaj podobnega, le da namesto črk v prazno polje vpisuješ formule in imena anorganskih spojin. Za vsak pravilen odgovor dobiš eno točko, za vsak napačen odgovor pa se na zaslonu nariše dodatna črta. Izgubiš v primeru, če je napačnih 9 odgovorov in je figurica 'obešena', zmagaš pa ko tridesetkrat odgovoriš pravilno.
 </div>
 <br>
 {% endif %}
