se zadnji popravki

--- a/koda/templates/vislice.html
+++ b/koda/templates/vislice.html
@@ -28,3 +28,10 @@
 {% endif %}
 
 {% endblock %}
+{% block scripts %}
+{{super()}}
+<script type="text/javascript">
+    field = document.getElementById("o0");
+    field.value = "";
+</script>
+{% endblock %}
