--- a/koda/templates/vrsta.html
+++ b/koda/templates/vrsta.html
@@ -50,7 +50,7 @@ Pri naslednjih nalogah so dane formule hidrogensoli. Napiši njihova imena. V im
 <br>
 <h3>Primer</h3>
 {% if kategorija=='kh' %}
-<b>Al(ClO4)3·<span style="color: red">9</span>H2O</b> – spojina ima ime <b>aluminijev klorat(VII) <span style="color: red">nona</span>hidrat</b> ali <b>aluminijev perklorat <span style="color: red">nona</span>hidrat</b> (sprejemljivo običajno ime)
+<b>Al(ClO<sub>4</sub>)<sub>3</sub>·<span style="color: red">9</span>H<sub>2</sub>O</b> – spojina ima ime <b>aluminijev klorat(VII) <span style="color: red">nona</span>hidrat</b> ali <b>aluminijev perklorat <span style="color: red">nona</span>hidrat</b> (sprejemljivo običajno ime)
 {% elif kategorija=='binarne' %}
 <b>CaF<span style="color: red"><sub>2</sub></span></b> - spojine ima ime <b>kalcijev <span style="color: red">di</span>fluorid</b> ali <b>kalcijev fluorid</b> (števnik lahko izpustimo)
 {% elif kategorija=='soli' %}
@@ -60,6 +60,6 @@ Pri naslednjih nalogah so dane formule hidrogensoli. Napiši njihova imena. V im
 {% elif kategorija=='baze' %}
 <b>Ca(OH)<sub>2</sub></b> - spojina ima ime kalcijev hidroksid
 {% else %}
-<b>Rb<span style="color: red">H</span>SO<sub>3</sub></b> – spojina ima ime <b>rubidijev <span style="color: red">hidrogen</span>sulfat(IV)</b> »(Stockov sistem imenovanja z navedbo oksidacijskega števila) ali <b>rubidijev <span style="color: red">hidrogen</span>sulfit</b> (sprejemljivo običajno ime)
+<b>Rb<span style="color: red">H</span>SO<sub>3</sub></b> – spojina ima ime <b>rubidijev <span style="color: red">hidrogen</span>sulfat(IV)</b> (Stockov sistem imenovanja z navedbo oksidacijskega števila) ali <b>rubidijev <span style="color: red">hidrogen</span>sulfit</b> (sprejemljivo običajno ime)
 {% endif %}
 {% endblock %}
